k8s/be-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  namespace: jerney
  labels: 
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-backend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: backend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: backend
        image: abhishekbakare/jerney-backend:latest
        ports:
          - containerPort: 5000
            protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            memory: 256Mi
            cpu: 300m
        #security context
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          #Strips away all standard Linux "superpowers" from the container.
          capabilities:
            drop:
              - ALL
        # are you alive, if app freezes then k8 kills the pod & start new one
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
        #ready for traffic
        readinessProbe:
          httpGet:  
            path: /api/health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
