k8s/db-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-db
  namespace: jerney
  labels: 
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
    app.kubernetes.io/name: jerney-db
spec:
  replicas: 1
  strategy:
    type: Recreate  #required for RWO volumes
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: database
        app.kubernetes.io/name: jerney-db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
          - name: db-storage
            mountPath: /var/lib/postgres/data
            subPath: pgdata
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        #security context
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false   #postgres needs write access
          runAsNonRoot: false   #postgres image runs initdb as root the drops
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: jerney-db-pvc
