k8s/fe-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-frontend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-frontend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: frontend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: frontend
        image: abhishekbakare/jerney-frontend:latest
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests: 
            cpu: 50m
            memory: 64Mi
          limits:
            memory: 128Mi
            cpu: 200m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false   #Nginx needs write for cache/pid
          runAsNonRoot: true
          runAsUser: 101   #nginx user UID in alpine
          capabilities:
            drop:
              - ALL
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
