k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jerney-db
  namespace: jerney
  labels:
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
    app.kubernetes.io/name: jerney-db
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jerney-db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
