k8s/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jerney-frontend
  namespace: jerney 
  labels: 
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jerney-frontend
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
